@@ -201,7 +201,7 @@ class system_monitor extends pts_module_interface
 					{
 						$test_result->test_profile->set_result_proportion('HIB');
 						$test_result->test_profile->set_result_scale('Performance Per Watt');
-						$test_result->set_result(pts_math::set_precision((1 / $test_result->get_result()) / $watt_average));
+						$test_result->set_result(pts_math::set_precision((1 / $test_result->get_result()) / $watt_average) / 1);
 						$result_file_writer->add_result_from_result_object_with_value_string($test_result, $test_result->get_result());
 					}
 				}
